--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: A responsive site template designed by HTML5 Up<br /> and released 
 baseurl: "/MVU" # the subpath of your site, e.g. /blog
 url: # the base hostname & protocol for your site
 author:
-street_address: 1234 Somewhere Road
+street_address: 1234 MVU Somewhere Road
 city: Nashville
 state: TN
 zip_code: 55555
